# Copyright (C) 2017 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

config("tracing_config") {
  include_dirs = [ "include" ]
}

source_set("tracing") {
  all_dependent_configs = [ ":tracing_config" ]
  sources = [
    "src/core/service_impl.cc",
  ]
}

executable("tracing_unittests") {
  testonly = true
  deps += [
    ":tracing",
    "//buildtools:gmock",
    "//buildtools:gtest",
    "//buildtools:gtest_main",
  ]
  sources = [
    "src/core/service_impl_unittest.cc",
    "src/test/test_shared_memory.cc",
    "src/test/test_task_runner.cc",
  ]
}

executable("tracing_benchmarks") {
  testonly = true
  deps += [ "//buildtools:benchmark" ]
  sources = [
    "src/test/hello_world_benchmark.cc",
  ]
}
